--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -3,28 +3,41 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
-
 <TextView
-    android:id="@+id/word_name"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textSize="18sp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingBottom="15dp"
-    android:paddingTop="15dp"
-    />
-
-    <TextView
-    android:id="@+id/word_translation"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+android:id="@+id/textName"
+    android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/word_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp" />
+
+
+    <TextView
+    android:id="@+id/word_meaning"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="left"
-    android:layout_marginTop="10dp"
     android:textSize="15dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:paddingBottom="15dp"
     android:paddingTop="5dp"/>
+
+    <TextView
+        android:id="@+id/word_sample"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:textSize="15dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp"/>
+
 
 </LinearLayout>
