--- a/app/src/main/res/layout/content.xml
+++ b/app/src/main/res/layout/content.xml
@@ -10,6 +10,7 @@
         android:orientation="vertical"
         android:visibility="invisible">
 
+
     <TextView
         android:id="@+id/word"
         android:layout_width="match_parent"
@@ -23,8 +24,17 @@
             android:layout_height="1dp"
             android:background="#000"/>
 
+
         <TextView
-            android:id="@+id/word_content"
+            android:id="@+id/word_meaning"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:padding="15dp"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/word_sample"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
