--- a/app/src/main/res/layout/content.xml
+++ b/app/src/main/res/layout/content.xml
@@ -25,6 +25,14 @@
             android:background="#000"/>
 
 
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="翻译："
+            android:textSize="25dp"/>
+
+
         <TextView
             android:id="@+id/word_meaning"
             android:layout_width="match_parent"
@@ -32,6 +40,12 @@
             android:layout_weight="1"
             android:padding="15dp"
             android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="例句："
+            android:textSize="25dp"/>
 
         <TextView
             android:id="@+id/word_sample"
