--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -15,5 +15,9 @@
         android:id="@+id/query"
         android:title="模糊查询" />
 
+    <item
+        android:id="@+id/refresh"
+        android:title="刷新" />
+
 
 </menu>
